MINT-299 fix drawer on mobile, fix isCBE

--- a/src/layouts/partials/DrawerPartial.scss
+++ b/src/layouts/partials/DrawerPartial.scss
@@ -3,17 +3,15 @@
 
 .root {
 
-  @include position(absolute);
-  overflow: visible;
-  box-shadow: $box-shadow-0;
+  @include position(fixed);
   z-index: 200;
 
   .content {
     @include position(absolute, 0, auto, 0, 0);
     background-color: $color-white;
     box-shadow: $box-shadow-0;
-    z-index: 200;
-    width: 200px;
+    z-index: 2;
+    width: 260px;
 
     .menu {
       display: block;
@@ -31,8 +29,26 @@
   }
 }
 
+.backdrop {
+  background-color: rgba(0,0,0,0.2);
+  @include position(absolute);
+  z-index: 1;
+}
+
 :global {
   .drawer-item-active {
     color: $color-primary-0 !important;
   }
+}
+
+.closed {
+  width: 60px;
+  height: 64px;
+  overflow: hidden;
+}
+
+.opened {
+  width: auto;
+  height: auto;
+  overflow: visible;
 }
